src/test/resources/basic/error/this_value_this_get_this_set_all_set/Target.kt
package basic.error.this_value_this_get_this_set_all_set

class Target {
    var x: Int = 0
}